Todo_현재시간에따라 doneTodo와 soonTodo 구분

--- a/todoDiary/Main.storyboard
+++ b/todoDiary/Main.storyboard
@@ -11,22 +11,6 @@
     </dependencies>
     <scenes>
         <!--Item-->
-        <scene sceneID="xfF-be-xi0">
-            <objects>
-                <viewController id="s30-GL-6sA" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="l5M-Ik-wsR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="aiz-d3-duL"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="xZC-ol-Lvv"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Opk-Qw-WY2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="132" y="860"/>
-        </scene>
-        <!--Item-->
         <scene sceneID="Ve5-hH-JES">
             <objects>
                 <viewController id="IiF-YF-Me4" customClass="SettingViewController" customModule="todoDiary" customModuleProvider="target" sceneMemberID="viewController">
@@ -76,29 +60,19 @@
                                 <color key="textColor" red="0.039215686274509803" green="0.10588235294117647" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6G-Gy-aAP">
-                                <rect key="frame" x="20" y="129" width="88" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="88" id="MgF-8L-9Gu"/>
-                                    <constraint firstAttribute="height" constant="35" id="wFG-eE-7G2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="29"/>
-                                <color key="textColor" red="0.039215686274509803" green="0.10588235294117647" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.94999999999999996" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-Ii-WFL" userLabel="Todo Collection VIew">
-                                <rect key="frame" x="0.0" y="172" width="414" height="581"/>
+                                <rect key="frame" x="0.0" y="98.5" width="414" height="654.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="12" id="VKD-MI-ont">
                                     <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="cell" id="Lpp-yl-fcN" customClass="TodoCellController" customModule="todoDiary" customModuleProvider="target">
-                                        <rect key="frame" x="7" y="10" width="400" height="80"/>
+                                        <rect key="frame" x="7" y="60" width="400" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PIA-gT-3gd">
                                             <rect key="frame" x="0.0" y="0.0" width="400" height="80"/>
@@ -232,6 +206,22 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TodoListHeader" id="ZAP-24-Dmk" customClass="TodoListHeader" customModule="todoDiary" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Today" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6G-Gy-aAP">
+                                            <rect key="frame" x="18" y="8" width="88" height="35"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="29"/>
+                                            <color key="textColor" red="0.039215686274509803" green="0.10588235294117647" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <connections>
+                                        <outlet property="sectionTitleLabel" destination="x6G-Gy-aAP" id="rlT-S7-oaf"/>
+                                    </connections>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="Ape-gd-hMt"/>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="qJR-Vl-elx"/>
@@ -311,16 +301,14 @@
                         <constraints>
                             <constraint firstItem="Wd1-HR-7lg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="5Dx-Gc-GZQ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="t6g-Ii-WFL" secondAttribute="trailing" id="6fh-J5-ho3"/>
-                            <constraint firstItem="x6G-Gy-aAP" firstAttribute="leading" secondItem="Wd1-HR-7lg" secondAttribute="leading" id="8Sj-O8-lIO"/>
                             <constraint firstItem="wQh-ER-l8X" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="CSB-lg-eHa"/>
                             <constraint firstItem="t6g-Ii-WFL" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FLd-C0-9NS"/>
                             <constraint firstItem="aMk-oF-cme" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="RDZ-Aw-w3d"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aMk-oF-cme" secondAttribute="trailing" id="T0m-ty-Nge"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="aMk-oF-cme" secondAttribute="bottom" id="aO5-iM-QF6"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wQh-ER-l8X" secondAttribute="trailing" id="eKN-Gp-6Yr"/>
-                            <constraint firstItem="t6g-Ii-WFL" firstAttribute="top" secondItem="x6G-Gy-aAP" secondAttribute="bottom" constant="8" symbolic="YES" id="gXU-Oz-BmK"/>
+                            <constraint firstItem="t6g-Ii-WFL" firstAttribute="top" secondItem="Wd1-HR-7lg" secondAttribute="bottom" constant="10" id="gAP-b0-KnS"/>
                             <constraint firstItem="wQh-ER-l8X" firstAttribute="top" secondItem="t6g-Ii-WFL" secondAttribute="bottom" id="ga6-79-wAu"/>
-                            <constraint firstItem="x6G-Gy-aAP" firstAttribute="top" secondItem="Wd1-HR-7lg" secondAttribute="bottom" constant="40.5" id="lWG-eN-AKo"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="wQh-ER-l8X" secondAttribute="bottom" id="otG-jl-dW0"/>
                             <constraint firstItem="Wd1-HR-7lg" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="17" id="qLZ-qz-pu8"/>
                         </constraints>
@@ -364,7 +352,6 @@
                     <connections>
                         <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="rLL-Im-LVW"/>
                         <segue destination="IiF-YF-Me4" kind="relationship" relationship="viewControllers" id="73e-s9-odY"/>
-                        <segue destination="s30-GL-6sA" kind="relationship" relationship="viewControllers" id="cfA-FB-izc"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="77U-fo-z9h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
