--- a/todoDiary/Main.storyboard
+++ b/todoDiary/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Item-->
         <scene sceneID="Ve5-hH-JES">
             <objects>
-                <viewController id="IiF-YF-Me4" customClass="SettingViewController" customModule="todoDiary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="IiF-YF-Me4" customClass="SettingController" customModule="todoDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Gb-Za-nVm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,11 +24,24 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="qYN-z5-HjC">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qYN-z5-HjC" id="QTG-gL-dtD">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="41"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCf-9f-CLu">
+                                                    <rect key="frame" x="20" y="10" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="zCf-9f-CLu" secondAttribute="bottom" constant="10" id="V8c-AT-7yL"/>
+                                                <constraint firstItem="zCf-9f-CLu" firstAttribute="top" secondItem="QTG-gL-dtD" secondAttribute="top" constant="10" id="hma-p1-811"/>
+                                                <constraint firstItem="zCf-9f-CLu" firstAttribute="leading" secondItem="QTG-gL-dtD" secondAttribute="leading" constant="20" id="oQZ-6a-dlx"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -66,13 +79,13 @@
                                 <gestureRecognizers/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="12" id="VKD-MI-ont">
                                     <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="cell" id="Lpp-yl-fcN" customClass="TodoCellController" customModule="todoDiary" customModuleProvider="target">
-                                        <rect key="frame" x="7" y="60" width="400" height="80"/>
+                                        <rect key="frame" x="7" y="10" width="400" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PIA-gT-3gd">
                                             <rect key="frame" x="0.0" y="0.0" width="400" height="80"/>
@@ -206,25 +219,6 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TodoListHeader" id="ZAP-24-Dmk" customClass="TodoListHeader" customModule="todoDiary" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해야 할 일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6G-Gy-aAP">
-                                            <rect key="frame" x="18" y="15" width="112.5" height="35"/>
-                                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="29"/>
-                                            <color key="textColor" red="0.039215686274509803" green="0.10588235294117647" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="x6G-Gy-aAP" firstAttribute="leading" secondItem="ZAP-24-Dmk" secondAttribute="leading" constant="18" id="37O-dE-IQf"/>
-                                        <constraint firstItem="x6G-Gy-aAP" firstAttribute="top" secondItem="ZAP-24-Dmk" secondAttribute="top" constant="15" id="Wzf-T2-gBa"/>
-                                    </constraints>
-                                    <connections>
-                                        <outlet property="sectionTitleLabel" destination="x6G-Gy-aAP" id="rlT-S7-oaf"/>
-                                    </connections>
-                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="Ape-gd-hMt"/>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="qJR-Vl-elx"/>
@@ -341,6 +335,23 @@
             </objects>
             <point key="canvasLocation" x="-686.95652173913049" y="845.75892857142856"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="hUY-KY-3LV">
+            <objects>
+                <viewController id="9qc-gr-7nW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jpo-kZ-ZCj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ocG-4s-7bQ"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.94509803921568625" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="H4C-Wh-fKj"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tQS-Vc-BPi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="42" y="846"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rK5-OJ-Gvv">
             <objects>
@@ -349,12 +360,13 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="x2B-f3-2Pm">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.81176470588235294" green="0.94509803921568625" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.94509803921568625" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" systemColor="tintColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="Y6W-OH-hqX" kind="relationship" relationship="viewControllers" id="rLL-Im-LVW"/>
                         <segue destination="IiF-YF-Me4" kind="relationship" relationship="viewControllers" id="73e-s9-odY"/>
+                        <segue destination="9qc-gr-7nW" kind="relationship" relationship="viewControllers" id="UTl-nz-2oR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="77U-fo-z9h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
